--- a/package.json
+++ b/package.json
@@ -4,19 +4,35 @@
   "private": true,
   "scripts": {
     "start": "node ./server/bin/www",
-    "watch": "nodemon ./bin/www"
+    "watch": "cross-env NODE_ENV=dev supervisor -i client ./server/bin/www"
   },
   "dependencies": {
-    "babel-loader": "^7.1.1",
+    "antd": "^2.12.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
     "debug": "~2.6.3",
     "ejs": "^2.5.6",
+    "es2015": "0.0.0",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "serve-favicon": "~2.4.2"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "reload": "^2.0.0",
+    "serve-favicon": "~2.4.2",
+    "style-loader": "^0.18.2",
+    "webpack-hot-middleware": "^2.18.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.0"
   }
 }
